fix/Prevent fixed div from being too wide

--- a/app/assets/stylesheets/_sidebar.scss
+++ b/app/assets/stylesheets/_sidebar.scss
@@ -2,7 +2,6 @@
 
 .sidebar {
   &--wrapper {
-    position: fixed;
     z-index: 1;
     margin-right: 15px;
   }
